fix images and dropdowns on mobile devices, delete unnecessary files

--- a/src/components/common/dropdown.scss
+++ b/src/components/common/dropdown.scss
@@ -4,21 +4,25 @@
   display: flex;
   flex-direction: column;
   margin: 0.5rem 1rem 0.5rem 0rem;
+  width: 100%;
 
-  &.small {
-    width: 10rem;
-  }
-
-  &.medium {
-    width: 20rem;
-  }
-
-  &.large {
-    width: 31rem;
-  }
   > span {
     font-size: 1.4rem;
     padding: 1rem 0 0.3rem 0.2rem;
+  }
+
+  @media screen and (min-width: 500px) {
+    &.small {
+      width: 10rem;
+    }
+
+    &.medium {
+      width: 20rem;
+    }
+
+    &.large {
+      width: 31rem;
+    }
   }
 }
 
